pod.yaml
 apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: kcda
    app: kcda
  name: kcda
spec:
  containers:
  - image: dmarinere/kcda-docker
    name: kcda
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
